manifests/nginx-simulated/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-simulated-deployment
  namespace: nginx-simulated
  labels:
    app: nginx-simulated
  annotations:
    argocd.argoproj.io/resource-ignore-differences: |
      [
        {"jsonPointers": ["/spec/replicas"]}
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-simulated
  template:
    metadata:
      labels:
        app: nginx-simulated
    spec:
      containers:
      - name: nginx-simulated-container
        image: harbor.kubernetes.name/library/nginx-simulated:ced158da013dedcc70f1fcaf443ff7ea2b99dd84
        ports:
        - containerPort: 80
          name: http-port
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      - name: nginx-exporter-sidecar
        image: nginx/nginx-prometheus-exporter:latest
        ports:
        - containerPort: 9113
          name: metrics
        args:
          - --nginx.scrape-uri=http://localhost:80/nginx_status
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
